@@ -586,9 +586,11 @@ rq.group.lla <- function(obj,x,y,groups,penalty=c("gAdLASSO","gSCAD","gMCP"),a=N
 					if(n > p + 1){
 					  #saveRDS(x,"tempx.RDS")
 					  #saveRDS(y,"tempy.RDS")
-						update_est <- try(coefficients(rq(y~x,tau=obj$tau[j])))
+						update_est <- try(coefficients(rq(y~x,tau=obj$tau[j])), silent=TRUE)
 						if(class(update_est)=="try-error"){
-						  update_est <- rep(0,p+1)  
+						  warning(paste0("At lambda value ", obj$lambda[i], " method is equivalent to an unpenalized method but quantreg:::rq(y~x) fails at quantile" obj$tau[j], ". Thus method stops at previous value of lambda")
+						  i <- i -1
+						  update_est <- newModels[[pos]]$coefficients[,i] # bad code alert. Hack to get out of this situation where rq doesn't work
 						}
 						endHit <- TRUE
 					} else{
